--- a/trunk/sketch/css/fonts/thai-font.css
+++ b/trunk/sketch/css/fonts/thai-font.css
@@ -6,7 +6,6 @@
          url('th_baijam_bold_italic-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-
 }
 
 @font-face {
@@ -17,7 +16,6 @@
          url('th_baijam_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -28,7 +26,6 @@
          url('th_baijam_italic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -39,7 +36,6 @@
          url('th_baijam-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_baijam{
@@ -98,7 +94,6 @@
          url('th_charm_of_au-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_charm_of_au{
@@ -113,7 +108,6 @@
          url('th_charmonman_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -124,7 +118,6 @@
          url('th_charmonman-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_charmonman{
@@ -141,7 +134,6 @@
          url('drdeco-webfont.svg#drdecoregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_drdeco{
@@ -156,7 +148,6 @@
          url('th_fahkwang_bold_italic-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-
 }
 
 @font-face {
@@ -167,7 +158,6 @@
          url('th_fahkwang_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -178,7 +168,6 @@
          url('th_fahkwang_italic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -189,7 +178,6 @@
          url('th_fahkwang-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_fahkwang{
@@ -204,7 +192,6 @@
          url('th_k2d_july8_bold_italic-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-
 }
 
 @font-face {
@@ -215,7 +202,6 @@
          url('th_k2d_july8_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -226,7 +212,6 @@
          url('th_k2d_july8_italic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -237,7 +222,6 @@
          url('th_k2d_july8-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_k2d_july8{
@@ -252,7 +236,6 @@
          url('th_kodchasal_bold_italic-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-
 }
 
 @font-face {
@@ -263,7 +246,6 @@
          url('th_kodchasal_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -274,7 +256,6 @@
          url('th_kodchasal_italic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -285,7 +266,6 @@
          url('th_kodchasal-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_kodchasal{
@@ -300,7 +280,6 @@
          url('th_koho-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_koho{
@@ -315,7 +294,6 @@
          url('th_krub_bold_italic-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-
 }
 
 @font-face {
@@ -326,7 +304,6 @@
          url('th_krub_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -337,7 +314,6 @@
          url('th_krub_italic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -348,7 +324,6 @@
          url('th_krub-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_krub{
@@ -363,7 +338,6 @@
          url('th_mali_grade6-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_mali_grade6{
@@ -378,7 +352,6 @@
          url('th_niramit_as_italic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -389,7 +362,6 @@
          url('th_niramit_as_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -400,7 +372,6 @@
          url('th_niramit_as_bold_italic-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-
 }
 
 @font-face {
@@ -411,7 +382,6 @@
          url('th_niramit_as-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_niramit_as{
@@ -426,7 +396,6 @@
          url('thsarabunnew-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -437,7 +406,6 @@
          url('thsarabunnew_bolditalic-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-
 }
 
 @font-face {
@@ -448,7 +416,6 @@
          url('thsarabunnew_italic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -459,7 +426,6 @@
          url('thsarabunnew_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 .thsarabunnew{
@@ -474,7 +440,6 @@
          url('th_srisakdi_bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -485,9 +450,68 @@
          url('th_srisakdi-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .th_srisakdi{
    font-family: 'THSrisakdi', sans-serif;
+}
+
+@font-face {
+    font-family: 'THDRjoyful';
+    src: url('DRjoyful-webfont.eot');
+    src: url('DRjoyful-webfont.eot?#iefix') format('embedded-opentype'),
+         url('DRjoyful-webfont.woff2') format('woff2'),
+         url('DRjoyful-webfont.woff') format('woff'),
+         url('DRjoyful-webfont.ttf') format('truetype'),
+         url('DRjoyful-webfont.svg#THDRjoyful') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.dr_joyful{
+   font-family: 'THDRjoyful', sans-serif;
+}
+
+@font-face {
+    font-family: 'THTSklinsee';
+    src: url('TS-Klinsee  Bold NP-webfont.eot');
+    src: url('TS-Klinsee  Bold NP-webfont.eot?#iefix') format('embedded-opentype'),
+         url('TS-Klinsee  Bold NP-webfont.woff2') format('woff2'),
+         url('TS-Klinsee  Bold NP-webfont.woff') format('woff'),
+         url('TS-Klinsee  Bold NP-webfont.ttf') format('truetype'),
+         url('TS-Klinsee  Bold NP-webfont.svg#THTSklinsee') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'THTSklinsee';
+    src: url('TS-Klinsee  NP-webfont.eot');
+    src: url('TS-Klinsee  NP-webfont.eot?#iefix') format('embedded-opentype'),
+         url('TS-Klinsee  NP-webfont.woff2') format('woff2'),
+         url('TS-Klinsee  NP-webfont.woff') format('woff'),
+         url('TS-Klinsee  NP-webfont.ttf') format('truetype'),
+         url('TS-Klinsee  NP-webfont.svg#THTSklinsee') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.th_tsklinsee{
+   font-family: 'THTSklinsee', sans-serif;
+}
+
+@font-face {
+    font-family: 'THkcnightmare';
+    src: url('KC Nightmare-webfont.eot');
+    src: url('KC Nightmare-webfont.eot?#iefix') format('embedded-opentype'),
+         url('KC Nightmare-webfont.woff2') format('woff2'),
+         url('KC Nightmare-webfont.woff') format('woff'),
+         url('KC Nightmare-webfont.ttf') format('truetype'),
+         url('KC Nightmare-webfont.svg#THkcnightmare') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.th_kcnightmare{
+   font-family: 'THkcnightmare', sans-serif;
 }
