--- a/sketch/css/iconfont.css
+++ b/sketch/css/iconfont.css
@@ -89,8 +89,13 @@
   width: 30px;
   height: 30px;
 }
-.icon-folder:before{
-  content: "\e646";
+.icon-upload:before{
+  content: "\e6c6";
+  width: 30px;
+  height: 30px;
+}
+.icon-download:before{
+  content: "\e6c7";
   width: 30px;
   height: 30px;
 }
@@ -139,7 +144,7 @@
   height: 30px;
 }
 .icon-paint:before {
-  content: "\e60e";
+  content: "\e672";
   width: 30px;
   height: 30px;
 }
@@ -160,6 +165,11 @@
 }
 .icon-cart:before {
   content: "\e69e";
+  width: 30px;
+  height: 30px;
+}
+.icon-drawer:before {
+  content: "\e6c2";
   width: 30px;
   height: 30px;
 }
